# unified-search

./: Cargo.toml  LICENSE  Readme.md
search-google/: Cargo.toml  Readme.md
search-google/src/: lib.rs  main.rs
search-youtube/: Cargo.toml  Readme.md
search-youtube/src/: lib.rs
src/: main.rs  youtube_search_response.json
unified-search/: Cargo.toml  README.md
unified-search/src/: gemini.rs  main.rs
youtube-search/: Cargo.toml
youtube-search/src/: main.rs
