[package]
name = "search-youtube"
repository = "https://github.com/akhiln28/youtube"
description = "A simple command line tool and library to search youtube videos"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.22"}
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }

tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.113"
